--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -1,5 +1,6 @@
 {
   "loadingStops": "Загружаю остановки...",
+  "acquiringLocation": "Ищу вас...",
   "next": "затем {time}",
   "search": "Найти...",
   "whereTo": "Куда едем?",
@@ -7,19 +8,21 @@
   "lookingForRoute": "Ищу варианты поездок...",
   "noRoutes": "Нет вариантов, извините.",
   "loadingRoute": "Загружаю маршрут...",
-  "errorLoadingRoute": "Ошибка загрузки маршрута: {message}",
+  "errorLoadingRoute": "Ошибка загрузки маршрута: {message}.",
   "minutes": "{value} мин",
   "busLeavesFrom": "{bus} идёт в {time} от {stop}",
   "walkMeters": "Пройдите {distance} м до <b>{destination}</b> (жёлтый кружок).",
   "walkDestination": "точки назначения",
   "stops": "{stops,plural, =1{{stops} остановку}, =few{{stops} остановки}, =other{{stops} остановок}}",
   "rideStops": "Езжайте {stops} до <b>{destination}</b>.",
-  "rideTime": "Езжайте по {arrival} до <b>{destination}</b>.",
-  "noStopsNearby": "Нет остановок поблизости",
+  "rideTime": "Езжайте до <b>{destination}</b>, прибытие в {arrival}.",
+  "noStopsNearby": "Нет остановок поблизости.",
+  "noArrivals": "Сегодня никто не приедет.",
   "addBookmark": "Добавить закладку",
   "bookmarkName": "Название",
   "deleteBookmark": "Удалить закладку \"{name}\"?",
   "delete": "Удалить",
+  "enableInternet": "Пожалуйста, включите интернет, чтобы можно было скачать маршруты.",
   "bus": "Автобус",
   "trolleybus": "Троллейбус",
   "tram": "Трамвай",
