--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -19,6 +19,7 @@
   "noStopsNearby": "Нет остановок поблизости.",
   "noArrivals": "Сегодня никто не приедет.",
   "arrivalsError": "Не удалось загрузить расписание.",
+  "bookmarkTarget": "Перетащите сюда, чтобы начать из сохранённого места",
   "addBookmark": "Добавить закладку",
   "bookmarkName": "Название",
   "deleteBookmark": "Удалить закладку \"{name}\"?",
