--- a/lib/l10n/app_et.arb
+++ b/lib/l10n/app_et.arb
@@ -1,15 +1,23 @@
 {
   "loadingStops": "Laadimine peatub...",
   "acquiringLocation": "Teie leidmine...",
+  "myLocation": "Minu asukoht",
   "next": "järgmine {time}",
   "search": "Otsi...",
+  "chooseOnMap": "Valida kaardil...",
+  "showMap": "Kaart",
   "whereTo": "Kuhu?",
   "newDestination": "Uus lõppsiht",
   "lookingForRoute": "Otsib marsruuti...",
   "noRoutes": "Vabandust, marsruute ei leitud.",
+  "showStopNames": "Peatus pealkirjad",
   "loadingRoute": "Marsruudi laadimine...",
   "errorLoadingRoute": "Viga marsruudi laadimisel: {message}.",
   "minutes": "{value} min",
+  "walkMin": "Jalutage {min}",
+  "arrivesText": "{bus} kuni {headsign} saabub {when}",
+  "storePlan": "Salvesta marsruut",
+  "restorePlan": "Salvestatud marsruut",
   "busLeavesFrom": "{bus} väljub kell {time} peatusest {stop}",
   "walkMeters": "Jalutage {distance} m <b>{destination}</b> (kollane ring).",
   "walkDestination": "lõppsiht",
