--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -1,15 +1,23 @@
 {
   "loadingStops": "Загружаю остановки...",
   "acquiringLocation": "Ищу вас...",
+  "myLocation": "Моя позиция",
   "next": "затем {time}",
   "search": "Найти...",
+  "chooseOnMap": "Указать на карте...",
+  "showMap": "Карта",
   "whereTo": "Куда едем?",
   "newDestination": "Новый пункт назначения",
   "lookingForRoute": "Ищу варианты поездок...",
   "noRoutes": "Нет вариантов, извините.",
+  "showStopNames": "Названия остановок",
   "loadingRoute": "Загружаю маршрут...",
   "errorLoadingRoute": "Ошибка загрузки маршрута: {message}.",
   "minutes": "{value} мин",
+  "walkMin": "Пешком {min}",
+  "arrivesText": "{bus} на {headsign} прибывает {when}",
+  "storePlan": "Сохранить маршрут",
+  "restorePlan": "Сохранённый маршрут",
   "busLeavesFrom": "{bus} идёт в {time} от {stop}",
   "walkMeters": "Пройдите {distance} м до <b>{destination}</b> (жёлтый кружок).",
   "walkDestination": "точки назначения",
