Emoji picker label, and 1.0.3 release

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -204,6 +204,10 @@
   "@bookmarkName": {
     "description": "Hint on the bookmark adding screen."
   },
+  "chooseEmoji": "Choose an emoji",
+  "@chooseEmoji": {
+    "description": "Hint for the emoji picked on the bookmark adding screen."
+  },
   "deleteBookmark": "Delete bookmark \"{name}\"?",
   "@deleteBookmark": {
     "description": "Text on a panel for deleting a bookmark.",
