--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -30,6 +30,7 @@
   "bookmarkTarget": "Перетащите сюда, чтобы начать из сохранённого места",
   "addBookmark": "Добавить закладку",
   "bookmarkName": "Название",
+  "chooseEmoji": "Выберите значок",
   "deleteBookmark": "Удалить закладку \"{name}\"?",
   "delete": "Удалить",
   "enableInternet": "Пожалуйста, включите интернет, чтобы можно было скачать маршруты.",
