--- a/lib/l10n/app_et.arb
+++ b/lib/l10n/app_et.arb
@@ -10,6 +10,7 @@
   "newDestination": "Uus lõppsiht",
   "lookingForRoute": "Otsib marsruuti...",
   "noRoutes": "Vabandust, marsruute ei leitud.",
+  "locationNotAccessible": "Ei leia marsruuti sihtkohta.",
   "showStopNames": "Peatus pealkirjad",
   "loadingRoute": "Marsruudi laadimine...",
   "errorLoadingRoute": "Viga marsruudi laadimisel: {message}.",
