--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -42,5 +42,16 @@
   "train": "Поезд",
   "ferry": "Паром",
   "regionalBus": "Региональный автобус",
-  "commercialBus": "Коммерческий автобус"
+  "commercialBus": "Коммерческий автобус",
+  "openTutorial": "Открыть инструкцию",
+  "tMainScreen": "Первый экран",
+  "bMainScreen": "Сдвиньте карту, если выходите из другого места, затем посмотрите прибывающие автобусы или нажмите на один из значков пункта назначения.",
+  "msMap": "Карта: начало маршрута и ближайшая остановка",
+  "msDestination": "Куда едем: закладки и поиск",
+  "msArrivals": "Список прибытий на ближайшую остановку",
+  "tBookmarks": "Закладки",
+  "bBookmarks": "Найдя место, куда будете ездить не раз, сохраните его, нажав \"+\". Выберите эмодзи и название для закладки, чтобы строить туда маршруты одним нажатием.",
+  "tSaveThePlan": "Сохраните маршрут",
+  "bSaveThePlan": "Выбрав маршрут к цели, нажмите на значок вверху, чтобы закрепить маршрут на главном экране и не потеряться на пересадках.",
+  "tutorialDone": "Закрыть"
 }
