--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -25,7 +25,7 @@
   "stops": "{stops,plural, =1{{stops} остановку}, =few{{stops} остановки}, =other{{stops} остановок}}",
   "rideStops": "Езжайте {stops} до <b>{destination}</b>.",
   "rideTime": "Езжайте до <b>{destination}</b>, прибытие в {arrival}.",
-  "noStopsNearby": "Нет остановок поблизости.",
+  "noStopsNearby": "Подойдите к остановке или передвиньте карту, чтобы посмотреть расписание.",
   "noArrivals": "Сегодня никто не приедет.",
   "arrivalsError": "Не удалось загрузить расписание.",
   "bookmarkTarget": "Перетащите сюда, чтобы начать из сохранённого места",
@@ -33,6 +33,8 @@
   "bookmarkName": "Название",
   "chooseEmoji": "Выберите значок",
   "deleteBookmark": "Удалить закладку \"{name}\"?",
+  "reverseRoute": "Маршрут в другую сторону",
+  "routeBack": "Обратный маршрут",
   "delete": "Удалить",
   "enableInternet": "Пожалуйста, включите интернет, чтобы можно было скачать маршруты.",
   "bus": "Автобус",
@@ -53,5 +55,7 @@
   "bBookmarks": "Найдя место, куда будете ездить не раз, сохраните его, нажав \"+\". Выберите эмодзи и название для закладки, чтобы строить туда маршруты одним нажатием.",
   "tSaveThePlan": "Сохраните маршрут",
   "bSaveThePlan": "Выбрав маршрут к цели, нажмите на значок вверху, чтобы закрепить маршрут на главном экране и не потеряться на пересадках.",
+  "tFriendRoute": "Помогите другу",
+  "bFriendRoute": "Чтобы построить маршрут от сохранённой точки, подержите закладку и перетащите её на карту. Булавка — это ваше местоположение. Также можете построить маршрут к другу и затем развернуть его к себе.",
   "tutorialDone": "Закрыть"
 }
