--- a/lib/l10n/app_et.arb
+++ b/lib/l10n/app_et.arb
@@ -14,6 +14,7 @@
   "showStopNames": "Peatus pealkirjad",
   "loadingRoute": "Marsruudi laadimine...",
   "errorLoadingRoute": "Viga marsruudi laadimisel: {message}.",
+  "fullMinutes": "{value,plural, =1{{value} minut}, =few{{value} minutit}, =other{{value} minutit}}",
   "minutes": "{value} min",
   "walkMin": "Jalutage {min}",
   "arrivesText": "{bus} kuni {headsign} saabub {when}",
@@ -22,8 +23,12 @@
   "busLeavesFrom": "{bus} väljub kell {time} peatusest {stop}",
   "walkMeters": "Jalutage {distance} m <b>{destination}</b> (kollane ring).",
   "walkDestination": "lõppsiht",
+  "youGotTime": "Teil on {minutes}.",
+  "noHurry": "Ärge kiirustage, teil on {minutes}.",
   "stops": "{stops,plural, =1{{stops} peatus}, =other{{stops} peatust}}",
-  "rideStops": "Sõit {stops} <b>{destination}</b>.",
+  "waitAndRideStops": "Oodake {min} ja sõitke {stops} <b>{destination}</b>.",
+  "rideStops": "Sõitke {stops} <b>{destination}</b>.",
+  "waitAndRideTime": "Oodake {min} ja sõida kuni kella {arrival} <b>{destination}</b>.",
   "rideTime": "Sõida kuni kella {arrival} <b>{destination}</b>.",
   "noStopsNearby": "Saabumisaegade vaatamiseks tulge peatusele lähemale või lohistage kaarti.",
   "noArrivals": "Täna pole saabujaid.",
