--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -15,6 +15,7 @@
   "loadingRoute": "Загружаю маршрут...",
   "errorLoadingRoute": "Ошибка загрузки маршрута: {message}.",
   "minutes": "{value} мин",
+  "fullMinutes": "{value,plural, =1{{value} минута}, =few{{value} минуты}, =other{{value} минут}}",
   "walkMin": "Пешком {min}",
   "arrivesText": "{bus} на {headsign} прибывает {when}",
   "storePlan": "Сохранить маршрут",
@@ -22,8 +23,12 @@
   "busLeavesFrom": "{bus} идёт в {time} от {stop}",
   "walkMeters": "Пройдите {distance} м до <b>{destination}</b> (жёлтый кружок).",
   "walkDestination": "точки назначения",
+  "youGotTime": "У вас {minutes}.",
+  "noHurry": "Не спешите, у вас {minutes}.",
   "stops": "{stops,plural, =1{{stops} остановку}, =few{{stops} остановки}, =other{{stops} остановок}}",
+  "waitAndRideStops": "Подождите {min} и езжайте {stops} до <b>{destination}</b>.",
   "rideStops": "Езжайте {stops} до <b>{destination}</b>.",
+  "waitAndRideTime": "Подождите {min} и езжайте до <b>{destination}</b>, прибытие в {arrival}.",
   "rideTime": "Езжайте до <b>{destination}</b>, прибытие в {arrival}.",
   "noStopsNearby": "Подойдите к остановке или передвиньте карту, чтобы посмотреть расписание.",
   "noArrivals": "Сегодня никто не приедет.",
