Update regionalBus translation.

--- a/lib/l10n/app_et.arb
+++ b/lib/l10n/app_et.arb
@@ -48,7 +48,7 @@
   "subway": "Metroo",
   "train": "Rong",
   "ferry": "Laev",
-  "regionalBus": "Piirkondlik buss",
+  "regionalBus": "Maakonnabuss",
   "commercialBus": "Kommertsbuss",
   "openTutorial": "Ava õpetus",
   "tMainScreen": "Põhiekraan",
