Rewrote geolocation access

--- a/lib/l10n/app_et.arb
+++ b/lib/l10n/app_et.arb
@@ -42,6 +42,10 @@
   "routeBack": "Marsruut tagasi",
   "delete": "Kustutada",
   "enableInternet": "Palun lülitage võrgule juurdepääs sisse, muidu ei saa ma marsruudi andmeid kätte.",
+  "enableGPS" : "GPS lubamine",
+  "enableGPSMessage": "Lülitage kuvataval seadete paneelil asukohateenused sisse.",
+  "enableLocation": "Luba asukoht",
+  "enableLocationMessage": "Lubage kuvataval seadete paneelil rakendusele juurdepääs asukohale.",
   "bus": "Buss",
   "trolleybus": "Troll",
   "tram": "Tramm",
