--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -42,6 +42,10 @@
   "routeBack": "Обратный маршрут",
   "delete": "Удалить",
   "enableInternet": "Пожалуйста, включите интернет, чтобы можно было скачать маршруты.",
+  "enableGPS" : "Включите GPS",
+  "enableGPSMessage": "Сейчас откроем панель настроек — включите в ней определение местоположения, пожалуйста.",
+  "enableLocation": "Разрешите GPS",
+  "enableLocationMessage": "Сейчас откроем панель настроек — разрешите в ней доступ к местоположению, пожалуйста.",
   "bus": "Автобус",
   "trolleybus": "Троллейбус",
   "tram": "Трамвай",
