--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -302,6 +302,22 @@
   "@enableInternet": {
     "description": "Shown when both wi-fi and data are off."
   },
+  "enableGPS" : "Enable GPS",
+  "@enableGPS": {
+    "description": "Title of the alert for enabling location services."
+  },
+  "enableGPSMessage": "Please turn on the location services in the settings panel that will be shown.",
+  "@enableGPSMessage": {
+    "description": "Contents of the alert for enabling location services."
+  },
+  "enableLocation": "Enable Location",
+  "@enableLocation":  {
+    "description": "Title of the alert for allowing app access to location."
+  },
+  "enableLocationMessage": "Please allow location access for the app in the settings panel that will be shown.",
+  "@enableLocationMessage": {
+    "description": "Contents of the alert for allowing app access to location."
+  },
   "bus": "Bus",
   "@bus": {
     "description": "Transit mode name."
