--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -56,15 +56,15 @@
   "commercialBus": "Коммерческий автобус",
   "openTutorial": "Открыть инструкцию",
   "tMainScreen": "Первый экран",
-  "bMainScreen": "Сдвиньте карту, если выходите из другого места, затем посмотрите прибывающие автобусы или нажмите на один из значков пункта назначения.",
-  "msMap": "Карта: начало маршрута и ближайшая остановка",
+  "bMainScreen": "Посмотрите прибывающие автобусы, подвиньте карту для выбора остановки, или нажмите на один из значков пункта назначения.",
+  "msMap": "Карта: ваше местоположение и ближайшая остановка",
   "msDestination": "Куда едем: закладки и поиск",
-  "msArrivals": "Список прибытий на ближайшую остановку",
+  "msArrivals": "Список прибытий на выбранную остановку",
   "tBookmarks": "Закладки",
-  "bBookmarks": "Найдя место, куда будете ездить не раз, сохраните его, нажав \"+\". Выберите эмодзи и название для закладки, чтобы строить туда маршруты одним нажатием.",
+  "bBookmarks": "Найдя место, куда будете ездить не раз, сохраните его, нажав кнопку. Выберите эмодзи и название для закладки, чтобы строить туда маршруты одним нажатием.",
   "tSaveThePlan": "Сохраните маршрут",
   "bSaveThePlan": "Выбрав маршрут к цели, нажмите на значок вверху, чтобы закрепить маршрут на главном экране и не потеряться на пересадках.",
   "tFriendRoute": "Помогите другу",
-  "bFriendRoute": "Чтобы построить маршрут от сохранённой точки, подержите закладку и перетащите её на карту. Булавка — это ваше местоположение. Также можете построить маршрут к другу и затем развернуть его к себе.",
+  "bFriendRoute": "Чтобы построить маршрут к себе для друзей, постройте маршрут до них и затем разверните его кнопкой.",
   "tutorialDone": "Закрыть"
 }
