--- a/lib/l10n/app_et.arb
+++ b/lib/l10n/app_et.arb
@@ -56,15 +56,15 @@
   "commercialBus": "Kommertsbuss",
   "openTutorial": "Ava õpetus",
   "tMainScreen": "Põhiekraan",
-  "bMainScreen": "Lohistage kaarti, kui alustate teisest kohast, seejärel vaadake saabumisaegu või puudutage mõnda sihtkohaikooni.",
-  "msMap": "Kaart: alguspunkt ja lähim peatus",
+  "bMainScreen": "Lohistage kaarti, et valida lähedal asuv peatus, vaadake selle saabumisaegu või puudutage mis tahes sihtkoha ikooni.",
+  "msMap": "Kaart: teie asukoht ja lähim peatus",
   "msDestination": "Sihtkoht: järjehoidjad ja otsing",
-  "msArrivals": "Saabumised lähimasse peatusesse",
+  "msArrivals": "Saabumised valitud peatusesse",
   "tBookmarks": "Järjehoidjad",
-  "bBookmarks": "Pärast tuttava sihtkoha valimist salvestage see, puudutades nuppu\"+\". Valige järjehoidjale emotikon ja nimi, et planeerida marsruute ühe puudutusega.",
+  "bBookmarks": "Pärast tuttava sihtkoha valimist salvestage see, puudutades nuppu. Valige järjehoidjale emotikon ja nimi, et planeerida marsruute ühe puudutusega.",
   "tSaveThePlan": "Salvesta plaan",
   "bSaveThePlan": "Pärast marsruudi valimist puudutage ikooni, et see põhiekraanile kinnitada, et saaksite pärast bussist lahkumist teada, kuhu minna.",
   "tFriendRoute": "Aidake sõpra",
-  "bFriendRoute": "Marsruudi kavandamiseks salvestatud asukohast vajutage järjehoidjal pikalt ja lohistage see kaardile. Nööpnõelaga järjehoidja on teie asukoht. Teise võimalusena koostage marsruut oma sõbrani ja pöörake see enda poole.",
+  "bFriendRoute": "Sõbra jaoks marsruudi kavandamiseks ehitage neile marsruudile nagu tavaliselt ja seejärel puudutage selle ümberpööramiseks nuppu.",
   "tutorialDone": "Valmis"
 }
