Eesti keel upgrade

--- a/lib/l10n/app_et.arb
+++ b/lib/l10n/app_et.arb
@@ -1,37 +1,37 @@
 {
-  "loadingStops": "Laadimine peatub...",
+  "loadingStops": "Peatuste laadimine...",
   "acquiringLocation": "Teie leidmine...",
   "myLocation": "Minu asukoht",
-  "next": "järgmine {time}",
-  "search": "Otsi...",
+  "next": "järgmine: {time}",
+  "search": "Otsing",
   "chooseOnMap": "Valida kaardil...",
   "showMap": "Kaart",
-  "whereTo": "Kuhu?",
-  "newDestination": "Uus lõppsiht",
-  "lookingForRoute": "Otsib marsruuti...",
+  "whereTo": "Kuhu sõidame?",
+  "newDestination": "Uus suund",
+  "lookingForRoute": "Otsin marsruuti...",
   "noRoutes": "Vabandust, marsruute ei leitud.",
-  "locationNotAccessible": "Ei leia marsruuti sihtkohta.",
-  "showStopNames": "Peatus pealkirjad",
+  "locationNotAccessible": "Sellise suunaga marsruute ei leitud.",
+  "showStopNames": "Peatuste nimed",
   "loadingRoute": "Marsruudi laadimine...",
-  "errorLoadingRoute": "Viga marsruudi laadimisel: {message}.",
+  "errorLoadingRoute": "Marsruudi laadimisel tekkis viga: {message}.",
   "fullMinutes": "{value,plural, =1{{value} minut}, =few{{value} minutit}, =other{{value} minutit}}",
   "minutes": "{value} min",
   "walkMin": "Jalutage {min}",
-  "arrivesText": "{bus} kuni {headsign} saabub {when}",
+  "arrivesText": "{bus} suunaga <b>{headsign}</b> saabub {when}",
   "storePlan": "Salvesta marsruut",
-  "restorePlan": "Salvestatud marsruut",
+  "restorePlan": "Marsruut salvestatud",
   "busLeavesFrom": "{bus} väljub kell {time} peatusest {stop}",
-  "walkMeters": "Jalutage {distance} m <b>{destination}</b> (kollane ring).",
-  "walkDestination": "lõppsiht",
+  "walkMeters": "Jalutage {distance}m <b>{destination}</b> (kollane ring).",
+  "walkDestination": "suund",
   "youGotTime": "Teil on {minutes}.",
-  "noHurry": "Ärge kiirustage, teil on {minutes}.",
+  "noHurry": "Ärge kiirustage, teil on veel {minutes}.",
   "stops": "{stops,plural, =1{{stops} peatus}, =other{{stops} peatust}}",
-  "waitAndRideStops": "Oodake {min} ja sõitke {stops} <b>{destination}</b>.",
-  "rideStops": "Sõitke {stops} <b>{destination}</b>.",
-  "waitAndRideTime": "Oodake {min} ja sõida kuni kella {arrival} <b>{destination}</b>.",
-  "rideTime": "Sõida kuni kella {arrival} <b>{destination}</b>.",
+  "waitAndRideStops": "Oodake {min} ja sõitke {stops} peatuseni <b>{destination}</b>.",
+  "rideStops": "Sõitke {stops} peatuseni <b>{destination}</b>.",
+  "waitAndRideTime": "Oodake {min} ja sõida kuni kella {arrival} peatuseni <b>{destination}</b>.",
+  "rideTime": "Sõida kuni kella {arrival} peatuseni <b>{destination}</b>.",
   "noStopsNearby": "Saabumisaegade vaatamiseks tulge peatusele lähemale või lohistage kaarti.",
-  "noArrivals": "Täna pole saabujaid.",
+  "noArrivals": "Täna pole saabumisi.",
   "arrivalsError": "Saabumise ajakava ei saanud värskendada.",
   "bookmarkTarget": "Lohistage siia, et alustada salvestatud kohast",
   "addBookmark": "Lisage järjehoidja",
@@ -51,13 +51,13 @@
   "tram": "Tramm",
   "subway": "Metroo",
   "train": "Rong",
-  "ferry": "Laev",
-  "regionalBus": "Maakonnabuss",
+  "ferry": "Praam",
+  "regionalBus": "Kaugliinibuss",
   "commercialBus": "Kommertsbuss",
-  "openTutorial": "Ava õpetus",
+  "openTutorial": "Ava juhised",
   "tMainScreen": "Põhiekraan",
   "bMainScreen": "Lohistage kaarti, et valida lähedal asuv peatus, vaadake selle saabumisaegu või puudutage mis tahes sihtkoha ikooni.",
-  "msMap": "Kaart: teie asukoht ja lähim peatus",
+  "msMap": "Kaart: teie asukoht ja lähimad peatused",
   "msDestination": "Sihtkoht: järjehoidjad ja otsing",
   "msArrivals": "Saabumised valitud peatusesse",
   "tBookmarks": "Järjehoidjad",
