--- a/lib/l10n/app_et.arb
+++ b/lib/l10n/app_et.arb
@@ -1,8 +1,8 @@
 {
-  "loadingStops": "Peatuste laadimine...",
-  "acquiringLocation": "Teie leidmine...",
+  "loadingStops": "Laen peatused...",
+  "acquiringLocation": "Otsin teie...",
   "myLocation": "Minu asukoht",
-  "next": "järgmine {time}",
+  "next": "ning {time}",
   "search": "Otsing",
   "chooseOnMap": "Valida kaardil...",
   "showMap": "Kaart",
@@ -14,7 +14,7 @@
   "showStopNames": "Peatuste nimed",
   "loadingRoute": "Marsruudi laadimine...",
   "errorLoadingRoute": "Marsruudi laadimisel tekkis viga: {message}.",
-  "fullMinutes": "{value,plural, =1{{value} minut}, =few{{value} minutit}, =other{{value} minutit}}",
+  "fullMinutes": "{value,plural, =1{{value} minut} few{{value} minutit} other{{value} minutit}}",
   "minutes": "{value} min",
   "walkMin": "Jalutage {min}",
   "arrivesText": "{bus} suunaga <b>{headsign}</b> saabub {when}",
@@ -25,7 +25,7 @@
   "walkDestination": "suund",
   "youGotTime": "Teil on {minutes}.",
   "noHurry": "Ärge kiirustage, teil on veel {minutes}.",
-  "stops": "{stops,plural, =1{{stops} peatus}, =other{{stops} peatust}}",
+  "stops": "{stops,plural, =1{{stops} peatus} other{{stops} peatust}}",
   "waitAndRideStops": "Oodake {min} ja sõitke {stops} peatuseni <b>{destination}</b>.",
   "rideStops": "Sõitke {stops} peatuseni <b>{destination}</b>.",
   "waitAndRideTime": "Oodake {min} ja sõida kuni kella {arrival} peatuseni <b>{destination}</b>.",
