--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -15,7 +15,7 @@
   "loadingRoute": "Загружаю маршрут...",
   "errorLoadingRoute": "Ошибка загрузки маршрута: {message}.",
   "minutes": "{value} мин",
-  "fullMinutes": "{value,plural, =1{{value} минута}, =few{{value} минуты}, =other{{value} минут}}",
+  "fullMinutes": "{value,plural, =1{{value} минута} few{{value} минуты} other{{value} минут}}",
   "walkMin": "Пешком {min}",
   "arrivesText": "{bus} на {headsign} прибывает {when}",
   "storePlan": "Сохранить маршрут",
@@ -25,7 +25,7 @@
   "walkDestination": "точки назначения",
   "youGotTime": "У вас {minutes}.",
   "noHurry": "Не спешите, у вас {minutes}.",
-  "stops": "{stops,plural, =1{{stops} остановку}, =few{{stops} остановки}, =other{{stops} остановок}}",
+  "stops": "{stops,plural, =1{{stops} остановку} few{{stops} остановки} other{{stops} остановок}}",
   "waitAndRideStops": "Подождите {min} и езжайте {stops} до <b>{destination}</b>.",
   "rideStops": "Езжайте {stops} до <b>{destination}</b>.",
   "waitAndRideTime": "Подождите {min} и езжайте до <b>{destination}</b>, прибытие в {arrival}.",
