--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -33,6 +33,7 @@
   "noStopsNearby": "Подойдите к остановке или передвиньте карту, чтобы посмотреть расписание.",
   "noArrivals": "Сегодня никто не приедет.",
   "arrivalsError": "Не удалось загрузить расписание.",
+  "arrivalsTryAgain": "Попробовать снова",
   "bookmarkTarget": "Перетащите сюда, чтобы начать из сохранённого места",
   "addBookmark": "Добавить закладку",
   "bookmarkName": "Название",
