--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -260,6 +260,10 @@
   "@arrivalsError": {
     "description": "Message on an arrivals panel when there's a network error."
   },
+  "arrivalsTryAgain": "Try again",
+  "@arrivalsTryAgain": {
+    "description": "Button label for refreshing the arrivals list in case of an error."
+  },
   "bookmarkTarget": "Drag here to set starting location",
   "@bookmarkTarget": {
     "description": "When dragging a bookmark, this text appears on top of the map."
